--- a/03_Day3.Rmd
+++ b/03_Day3.Rmd
@@ -94,7 +94,7 @@ cat(readLines("porg_tabs.txt"))
 __So where were we? Oh right, we we're enjoying our time on beautiful lush Endor. But aren't we missing somebody?__
 
 
-# Finn needs us! {-}
+# | Finn needs us! {-}
 
 That's enough _scuttlebutting_ around on Endor, Finn needs us back on Jakku. It turns out we forgot to pick-up Finn when we left. Now he's being held ransom by Junk Boss Plutt. We'll need to act fast to get to him before the Empire does. __Blast off!__ 
 
@@ -133,12 +133,15 @@ Okay, so we're back on the ol' dust bucket. Let's try not to forget anything whi
 
 Mr. Baddy Plutt is demanding __10,000 items__ of scrap for Finn. Sounds expensive, but lucky for us he didn't clarify the exact items. Let's find the scrap that weighs the least per shipment and try to make this transaction as light as possible. 
 
-Take a look at our __NEW__ scrap data and see if we have the mass of all the items.
+Take a look at our __NEW__ scrap data and see if we have the weight of all the items.
 
 ```{r fullscrap-units, eval=T}
 # What unit types are in the data?
 unique(scrap$units)
+```
 
+__Or return results as a data frame__
+```{r distinct-units, eval=T}
 distinct(scrap, units)
 ```
 
@@ -154,9 +157,9 @@ I think we're going to need some more data.
 <br>
 
 <div class="tip">
-__"Hey BB8!__ 
+__"Hey BB8!"__ 
 
-__Please go do your magic data finding thing."__
+__"Please do your magic data finding thing."__
 
 </div>
 
@@ -164,9 +167,9 @@ __Please go do your magic data finding thing."__
 
 ![](images/rey_bb8.jpg){align="right" style="width: 35%; margin-top: 0px; margin-left: 15px; margin-right: 0px;"}
 
-It took a while, but with a few droid bribes BB8 was able to track down a `Mass conversion table` from his old droid buddies. Our current data shows the total cubic yards for some scrap shipments, but not how much the shipment weighs. 
+It took a while, but with a few droid bribes BB8 was able to track down a _Weight conversion table_ from his old droid buddies. Our current data shows the total cubic yards for some scrap shipments, but not how much the shipment weighs. 
 
-### Read the mass conversion table {-}
+### Read the weight conversion table {-}
 ```{r read-convert, eval = T, message = F}
 # The data's URL
 convert_url <- "https://rtrain.netlify.com/data/conversion_table.csv"
@@ -186,7 +189,7 @@ Let's join this new conversion table to the scrap data to make our calculations 
 __Say "Hello" to `left_join()`!__  
 
 
-# | Join tables with `left_join()`
+# | Join tables
 
 ![](images/leftjoin_scrap.png){style="width: 55%; margin-left: 18%;"}
 
@@ -312,7 +315,7 @@ scrap <- scrap %>%
 
 <div class="note">
 
-### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
+### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> EXERCISE {-}
 
 ```{r exer-tabs, results='asis', echo=F}
 source("insert_tabs.R")
@@ -484,7 +487,7 @@ __Hint:__ Add `na.rm = T` to `quantile()`.
 
 <div class="tip">
 
-### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
+### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> EXERCISE {-}
 
 Create a summary of the scrap data that includes 3 of the summary functions above. The following is one example.
 
@@ -625,7 +628,7 @@ You can round the prices to a certain number of digits using the `round()` funct
 
 ```{r mean_price-by-Origin-round, eval = F}
 
-scrap_means <- group_by(scrap, origin) %>% 
+mean_prices <- group_by(scrap, origin) %>% 
                  summarize(mean_price       = mean(price_per_unit, na.rm = T),
                            mean_price_round = round(mean_price, digits = 2)) %>%  
                  arrange(mean_price_round) %>%
@@ -658,12 +661,12 @@ Ending with `ungroup()` is good practice. This prevents your data from staying g
 # | Save files
 <hr>
 
-Let's save the mean price summary table we created to a _CSV_. That way we can transfer it to a _droid courier_ for delivery to Rey. To save a data frame we can use the `write_csv()` function from our favorite `readr` package. 
+Let's save the mean price summary table we created to a _CSV_. That way we can transfer it to a _droid courier_ for delivery to Rey. To save a data frame we use the `write_csv()` function from our favorite `readr` package. 
 
 ```{r, eval=F}
 
 # Write the file to your results folder
-write_csv(scrap_summary, "results/prices_by_origin.csv")
+write_csv(mean_prices, "results/prices_by_origin.csv")
 
 ```
 
@@ -730,7 +733,7 @@ scrap <- scrap %>%
 
 <div class="tip">
 
-#### <i class="fa fa-cogs" aria-hidden="true" style="color: green"></i> Exercise {-}
+#### <i class="fa fa-cogs" aria-hidden="true" style="color: green"></i> EXERCISE {-}
 
 Use `filter()` to create a new `cheap_scrap` table.
 
@@ -847,7 +850,7 @@ ggplot(scrap, aes(x = origin, y = credits)) + geom_point()
 <br>
 
 <div class="tip">
-#### <i class="fa fa-cogs" aria-hidden="true" style="color: green"></i> Exercise {-}
+#### <i class="fa fa-cogs" aria-hidden="true" style="color: green"></i> EXERCISE {-}
 
 Try making a scatterplot of any two columns.
 
@@ -893,7 +896,7 @@ ggplot(scrap, aes(x = origin, y = credits, fill = destination)) +
 
 <div class="tip">
 
-### <i class="fa fa-user-astronaut" aria-hidden="true" style="color:#040707;"></i> EXERCISE {-}
+### <i class="fa fa-user-bicycle" aria-hidden="true" style="color:#040707;"></i> EXERCISE {-}
 
 An easy way to experiment with colors is to add layers like `+ scale_fill_viridis()` or `+ scale_fill_brewer()` to your plot, which will link to RcolorBrewer so you can have accessible color schemes.
 
@@ -945,8 +948,9 @@ ggplot(cheap_scrap, aes(x =   , y =    ) ) +
 
 <details>
 <summary class = "btn_code">_Show code_</summary>
-<p>
 
+<div class="quiz" style="margin-top: -9px;">
+<p>
 
 ```{r}
 ggplot(cheap_scrap, aes(x = destination, y = total_pounds) ) + 
@@ -954,7 +958,7 @@ ggplot(cheap_scrap, aes(x = destination, y = total_pounds) ) +
 
 ```
 
-</p></details>
+</p></div></details>
 
 
 
@@ -983,7 +987,7 @@ _Woop! Go get em! So long Jakku - see you never!_
 <br><br>
 
 
-# <i class="fa fa-star" aria-hidden="true" style="color: gold"></i> CONCATULATIONS! <i class="fa fa-star" aria-hidden="true" style="color: gold"></i>
+# <i class="fa fa-star" aria-hidden="true" style="color: gold"></i> CONCATULATIONS! <i class="fa fa-star" aria-hidden="true" style="color: gold"></i> {-}
 <hr>
 
 > __Clap your hands. You have earned a great award.__
@@ -992,7 +996,7 @@ _Woop! Go get em! So long Jakku - see you never!_
 <br>
 
 
-# Plot extras
+# | Plot extras
 <hr>
 
 ## Themes {-}
@@ -1068,7 +1072,7 @@ _Sorry, the hint is missing. You're on your own._
 
 <div class="tip">
 
-### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> Exercise {-}
+### <i class="fa fa-bicycle" aria-hidden="true" style="color: green"></i> EXERCISE {-}
 
 Be brave and make a boxplot. We've covered how to do a scatterplot with `geom_point` and a bar chart with `geom_col`, but how would you make a boxplot showing the prices at each destination? You're on your own here. Feel free to add `color` ,`facet_wrap`, `theme`, and `labs` to your boxplots. 
 
