--- a/help.Rmd
+++ b/help.Rmd
@@ -20,30 +20,35 @@ output:
 #<style> code {color: #535353 !important;} </style>
 ```
 
-__Cheatsheets__
+### Cheatsheets {-}
 
 <a href="https://www.rstudio.com/wp-content/uploads/2018/08/data-visualization-2.1.png">
 ![](https://itep-r.netlify.com/images/cheatsheet_ggplot.jpg){style="width: 48%; float: right; margin-left: 20px; margin-top: -16px;"}
 </a>
 
-Use cheatsheets to refresh your memory and find new functions or plots. 
+Cheatsheets are great for refreshing your memory and finding new functions and plots to use. 
 
 - In RStudio go to `Help > Cheatsheets >`
     - __Data Transformation__ - Helpful functions for cleaning and arranging your data.  
     - __Data Visualization__ - Great reference for all your `ggplot`'ing options. 
 
 
-__Learn more R__
+### Learn more R {-}
 
-- In your browser: [DataCamp Intro](https://campus.datacamp.com/courses/free-introduction-to-r/chapter-1-intro-to-basics-1?ex=1)
-   - Review the tidyverse functions with David Robinson [DataCamp tidyverse](https://campus.datacamp.com/courses/introduction-to-the-tidyverse/data-wrangling-1)
-- RStudio lessons: https://rstudio.github.io/learnr/examples.html
-- RStudio videos: https://tutorials.shinyapps.io/04-Programming-Basics/
--	Learn directly in `R` with: [swirlR](https://swirlstats.com/students.html)  
-- Coursera classes: [John Hopkins courses w/ Roger Peng](https://www.coursera.org/specializations/jhu-data-science)    
+__From your browser__
 
+- [Charts & Plots Intro](https://campus.datacamp.com/courses/introduction-to-the-tidyverse/data-wrangling-1) - Review ggplot2 and dplyr functions with country data
+- RStudio interactive lessons: [Summarizing data](https://rstudio.github.io/learnr/examples.html)
+- [RStudio Visualization primers](https://rstudio.cloud/learn/primers/3)
+- RStudio videos: [Programming basics](https://tutorials.shinyapps.io/04-Programming-Basics/)
+- Coursera classes: [John Hopkins courses w/ Roger Peng](https://www.coursera.org/specializations/jhu-data-science)
 
-__Find new packages and functions__
+__From within `R`__
+
+- [swirlR](https://swirlstats.com/students.html)  
+    
+
+### Find new packages and functions {-}
 
 - Search packages in R with [CRANsearcher](https://github.com/RhoInc/CRANsearcher)
 - [ROpenSci](https://ropensci.org/packages/) has packages and data for all types of environmental and "scientific" work.
@@ -60,9 +65,9 @@ __Searching online__
 
 __Inside R__
 
-- Get function help and package info in R with `?arrange()` or `help(dplyr)`
+- Get function and package help from the console with: `?arrange()` or `help(dplyr)`
 
-__E-mail__
+__Email us!__
 
 - Post a question to MPCA's [R-questions](https://github.com/mpca-air/R-questions)  
 - Ask us!
